# multiscale_read

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yaml
src/multiscale_read/: __init__.py  base.py  ngl_n5.py  ome.py  utils.py
tests/: test_multiscale_read.py
