[tool.poetry]
name = "multiscale-read"
version = "0.1.0"
description = "Read multiscale arrays with various metadata standards"
authors = ["Chris Barnes <chrislloydbarnes@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "multiscale_read", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
zarr = "^2.15.0"
xarray-ome-ngff = "^1.2.0"
pydantic-ome-ngff = "^0.2.3"
# spatial-image = "^0.3.0"
pydantic = "^1.10"
numpy = "^1.25.0"
pint-xarray = "^0.3"
fsspec = {version = "^2023.6.0", extras = ["http"]}
dask = "^2023.6.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.276"
black = "^23.3.0"
mypy = "^1.4.1"


[tool.poetry.group.examples.dependencies]
dask = "^2023.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
